8136469: OptimizeStringConcat fails on pre-sized StringBuilder shapes

Cut off dead if branch already during parsing (GVN).

Reviewed-by: shade, kvn, roland